@@ -1,3 +1,9 @@
+2011-03-31  Ian Piumarta  <piumarta@freebsd.piumarta.com>
+
+	* vm/sqUnixExternalPrims.c: Resolve symbols eagerly on FreeBSD.
+
+	* vm-display-X11/sqUnixX11.c (initPixmap): Remove reference to undefined function "error".
+
 2011-03-30  Ian Piumarta  <piumarta@freebsd.piumarta.com>
 
 	* plugins/FloatMathPlugin/config.cmake: Re-enable GCC optimisations.
